fix(menu): labels in secondary pointing menu items were misaligned
Putting an inline label for some, but not all menu items in a `secondary pointing menu` breaks the vertical alignment.
I labeled this as a bug rather than an enhancement as it was in the original SUI issue.

--- a/src/definitions/collections/menu.less
+++ b/src/definitions/collections/menu.less
@@ -937,6 +937,15 @@ Floated Menu / Item
   border-bottom-width: 0;
 }
 
+.ui.secondary.pointing.menu .item > .label {
+  margin-top: -@labelVerticalPadding;
+  margin-bottom: -@labelVerticalPadding;
+}
+.ui.secondary.pointing.menu .item > .circular.label {
+  margin-top: -@circularLabelVerticalPadding;
+  margin-bottom: -@circularLabelVerticalPadding;
+}
+
 /* Item Types */
 .ui.secondary.pointing.menu .header.item {
   color: @secondaryPointingHeaderColor !important;
